<resources>
    <string name="app_name">GSI</string>
    <string name="info_acerca_de">descripcion de la clinica/hopital bla bla Esta aplicación nace del grupo 04   </string>
    <string name="label_bienvenida">Hello ! - Sign in to login</string>
    <string name="label_registro">Hello ! - Register to be able to enter</string>

    <string name="label_usuario">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_start_session">Log in</string>


    <string name="hint_nombre">Name</string>
    <string name="hint_telefono">Phone</string>
    <string name="hint_correo">Email</string>

    //BUTTONS
    <string name="btn_agregar">Accept </string>
    <string name="btn_actualizar">Update</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_guardarCambios">Guardar Cambios</string>
    <string name="btn_login">Log in</string>
    <string name="btn_register">Sign up</string>


    //DASHBOARDPACIENTE
    <string name="greeting">Hola ,</string>


    //DASHBOARDADMINISTRADOR
    <string name="lbl_especialidad">ESPECIALIDADES</string>
    <string name="lbl_procedimineto">PROCEDIMIENTOS</string>
    <string name="lbl_medico">MÉDICOS</string>
    <string name="lbl_recita">RESERVAR CITA</string>
    <string name="lbl_cerrarSesion">CERRAR SESIÓN</string>
    <string name="lbl_volver">VOLVER</string>
    <string name="lbl_ajustes">AJUSTES</string>
    <string name="lbl_acercaNosotros">ACERCA DE \nNOSOTROS</string>
    <string name="lbl_acercaNosotros2">ACERCA DE NOSOTROS</string>
    <string name="lbl_ubicacion">¿DÓNDE NOS UBICAMOS?</string>
    <string name="lbl_perfil">PERFIL</string>
    <string name="lbl_controlSalud">CONTROL SALUD</string>
    <string name="lbl_paciente">PACIENTES</string>


    //CONTROL SALUD
    <string name="lbl_enfermedad">ENFERMEDADES</string>
    <string name="lbl_alergia">ALERGIAS</string>
    <string name="lbl_contactomedico">CONTACTO MÉDICO</string>
    <string name="lbl_cEmergencia">CONTACTO EMERGENCIA</string>
    <string name="lbl_medicina">MEDICINA</string>
    <string name="lbl_cita">CITAS</string>

    //REGISTER
    <string name="lbl_pais">Pais:</string>
    <string name="lbl_sexo">Sexo:</string>
    <string name="lbl_estadocivil">Estado Civil:</string>
    <string name="lbl_especialidad2">Especialidad:</string>

    //REGISTER
    <string name="lbl_acercaGrupoSalud">Grupo de jóvenes empresarios vecinos
 de la zona de Breña que conociendo
 </string>

    //PERFIL PACIENTE
    <string name="lbl_nombre">Nombre:</string>
    <string name="lbl_ApellidoP">Apellido Paterno:</string>
    <string name="lbl_ApellidoM">Apellido Materno:</string>
    <string name="lbl_telefono">Telefono:</string>
    <string name="lbl_direccion">Direccion:</string>


    //ACERCA NOSOTROS


    //ALERT DIALOG
    <string name="success">Success</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>


    //MEDICO
    <string name="lbl_turno">Turno:</string>
    <string name="lbl_horarioIngreso">Horario Ingreso:</string>
    <string name="lbl_horarioSalida">Horario Salida:</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>