<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".MainActivity2">

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSuccess"
        android:textSize="16sp"
        android:text="@string/success"
        android:fontFamily="@font/roboto_medium"
        android:textStyle="bold"
        tools:ignore="ButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonWarning"
        android:textSize="16sp"
        android:text="@string/warning"
        android:fontFamily="@font/roboto_medium"
        android:textStyle="bold"
        tools:ignore="ButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonError"
        android:textSize="16sp"
        android:text="@string/error"
        android:fontFamily="@font/roboto_medium"
        android:textStyle="bold"
        tools:ignore="ButtonStyle"/>

</LinearLayout>